# wxmav

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  INSTALL.wxmav  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen  autokludge.sh  config.h.in  config.h.in~  configure  configure.ac  dbus_gio.c  dbus_gio.h  fedora-wayland-hack  getopt.c  getopt1.c  wxmav.in  wxmav.py  wxmav.pyw  wxmav_control.in  wxmav_main.py  wxmav_mpris2ctl.py  x-aud-key-srv.c  x-aud-key-srv.h  x-help-ini-thds.c  x-help-ini-thds.makefile
cdata/: Makefile  cdata.h.in  cdata.m4  desktopfile.in  desktopmime.in  license.c.head  version.sh.in
examples/: 0._internet_radio_streams.pls  1. roger fast and furious corman.pls
msw_pkg/: Makefile  Makefile.in  README  wxmav.nsi  wxmav.nsi.in
msw_pynsist/: Makefile  Makefile.in  installer_template.nsi.in  installer_template.nsi.in-sample  t-log  t-log-bundled  t-log-installer  wxmav.nsist.in
xdg/: icons.py  img_to_icos.sh  wxmav.desktop  wxmav.xdgmime.xml
